[gd_scene load_steps=5 format=2]

[ext_resource path="res://projectiles/IceBurst.gd" type="Script" id=1]
[ext_resource path="res://assets/Particle_Tex.png" type="Texture" id=2]


[sub_resource type="CircleShape2D" id=1]
radius = 400.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.728477, 1 )
colors = PoolColorArray( 0, 0.952941, 1, 0.780392, 1, 1, 1, 0.780392, 1, 1, 1, 0.776471 )

[node name="IceBurst" type="Area2D"]
collision_layer = 0
collision_mask = 136
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 200
lifetime = 4.9
speed_scale = 25.0
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 0 )
angular_velocity = 2000.0
angular_velocity_random = 1.0
radial_accel = 130.0
damping = 100.0
angle = 500.0
angle_random = 1.0
scale_amount = 0.2
color_ramp = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="ActiveTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_IceBurst_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
